--- a/css/theme/madrid.css
+++ b/css/theme/madrid.css
@@ -286,3 +286,20 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+/*********************************************
+ * MY OWN SH*T
+ *********************************************/
+#overlay {
+    position: absolute; 
+    top: 100px;
+    left: 170px;
+    color: #FFF; 
+    text-align: right;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #000;
+    width: 640px;
+    padding: 0 0;
+    z-index: 2147483647;
+}
