--- a/css/theme/madrid.css
+++ b/css/theme/madrid.css
@@ -288,18 +288,11 @@ body {
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
 /*********************************************
- * MY OWN SH*T
+ * MY OWN STUFF
  *********************************************/
-#overlay {
-    position: absolute; 
-    top: 100px;
-    left: 170px;
-    color: #FFF; 
-    text-align: right;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: #000;
-    width: 640px;
-    padding: 0 0;
-    z-index: 2147483647;
+.attribution{
+    position:absolute;
+    bottom:0;
+    right:0;
+    font-size:0.2em
 }
